--- a/cauda-equina/station1.html
+++ b/cauda-equina/station1.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Station 1: Patient History & Symptoms</h1>
-        <a href="../index.html">Back to Landing Page</a>
+        <a href="../index.html">Back to Landing Page</a> <!-- Link to go back to the main landing page -->
     </header>
 
     <section>
@@ -41,7 +41,13 @@
             <li>C. Blurry vision</li>
             <li>D. Sneezing</li>
         </ul>
+        <p><strong>Answer: B. Pain radiating into a leg</strong></p>
 
     </section>
+
+    <!-- Clear Back to Landing Page Link at the Bottom -->
+    <footer>
+        <p><a href="../index.html">Back to Landing Page</a></p>
+    </footer>
 </body>
 </html>
