--- a/cauda-equina/station1.html
+++ b/cauda-equina/station1.html
@@ -46,7 +46,7 @@
 
     <!-- Clear Back to Landing Page Link at the Bottom -->
     <footer>
-        <p><a href="../cauda-equina/index.html">Back to Landing Page</a></p>
+        <p><a href="https://shipseybio.github.io/anatomy-case-studies/cauda-equina/">Back to Landing Page</a></p>
     </footer>
 </body>
 </html>
