--- a/cauda-equina/station2.html
+++ b/cauda-equina/station2.html
@@ -37,7 +37,8 @@
             <li>C. Biceps brachii</li>
             <li>D. Tibialis anterior</li>
         </ul>
-
+        <p>Hint: Think back to the muscles unit!</p>
+        
         <!-- Visual Aid: Patellar Reflex Animation -->
         <h3>Patellar Reflex Animation</h3>
         <p>This shows what a normal patellar reflex looks like, but John's patellar reflex is diminished.</p>
