--- a/cauda-equina/station2.html
+++ b/cauda-equina/station2.html
@@ -16,6 +16,7 @@
         <h2>Definitions</h2>
         <ul>
             <li><strong>Dorsiflexion</strong>: Lifting the front of the foot upward.</li>
+            <li><strong>Deep Tendon Reflex</strong>: Involuntary, stereotyped muscle contractions that occur when a specific tendon is tapped.</li>
         </ul>
 
         <h2>Patient Overview</h2>
@@ -41,12 +42,12 @@
         
         <!-- Visual Aid: Patellar Reflex Animation -->
         <h3>Patellar Reflex Animation</h3>
-        <p>This shows what a normal patellar reflex looks like, but John's patellar reflex is diminished.</p>
-        <img src="https://faculty.washington.edu/chudler/gif/ppreflex.gif" alt="Patellar Reflex Animation" style="width: 500px; height: auto; margin-top: 20px;">
+        <p>This shows what a normal patellar reflex looks like, but John's patellar reflex is diminished.  The reflex arc can be damaged by spinal cord injury.</p>
+        <img src="https://faculty.washington.edu/chudler/gif/ppreflex.gif" alt="Patellar Reflex Animation" style="width: 400px; height: auto; margin-top: 20px;">
 
         <!-- Question 2: Immediately after Patellar Reflex Animation -->
         <h4>Question 2:</h4>
-        <p><strong>Which spinal reflex is most likely reduced in John based on his quadriceps weakness?</strong></p>
+        <p><strong>Which spinal reflex is reduced in John?</strong></p>
         <ul>
             <li>A. Biceps reflex</li>
             <li>B. Achilles reflex</li>
