--- a/cauda-equina/station2.html
+++ b/cauda-equina/station2.html
@@ -47,7 +47,7 @@
 
         <!-- Question 2: Immediately after Patellar Reflex Animation -->
         <h4>Question 2:</h4>
-        <p><strong>Which spinal reflex is reduced in John?</strong></p>
+        <p><strong>John has a reduced __________. </strong></p>
         <ul>
             <li>A. Biceps reflex</li>
             <li>B. Achilles reflex</li>
