--- a/cauda-equina/station3.html
+++ b/cauda-equina/station3.html
@@ -19,8 +19,6 @@
             <li><strong>Dermatome</strong>: A skin area innervated by one spinal nerve.</li>
         </ul>
 
-        <h2>Patient Overview</h2>
-        <p>During the sensory exam, John demonstrates loss of feeling on his left lateral calf and foot, along with saddle anesthesia. Two-point discrimination testing on the lateral calf shows a result of 55mm, which is abnormal when compared to normal ranges.</p>
 
         <h3>Task: Sensory Testing</h3>
         <p>Use the calipers provided to simulate two-point discrimination testing on the lateral calf. Compare John’s result to the normal range chart. Also, use a dermatome map to help identify the affected spinal nerve root.</p>
@@ -30,6 +28,8 @@
         <h3>Two-Point Discrimination Tool</h3>
         <img src="https://study.com/cimages/videopreview/videopreview-full/4lw99bw48e.jpg" alt="Two-Point Discrimination Tool" style="width: 500px; height: auto; margin-top: 20px;">
 
+           <h2>Patient Overview</h2>
+        <p>During the sensory exam, John is asked "One touch or two?".  He can accurately tell the difference on his arm.  But he demonstrates loss of feeling on his left lateral calf and foot, along with saddle anesthesia. Two-point discrimination testing on the lateral calf shows a result of 55mm, which is abnormal when compared to normal ranges.</p>
         <h3>Questions:</h3>
 
         <h4>Question 1:</h4>
