--- a/index.html
+++ b/index.html
@@ -3,26 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Case Study: John’s Journey – Anatomy & Physiology</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Anatomy Case Studies - Professor Shipsey</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            color: #333;
+        }
+        header {
+            background-color: #005f73;
+            color: white;
+            padding: 20px 0;
+        }
+        h1 {
+            margin: 0;
+            font-size: 36px;
+        }
+        p {
+            font-size: 18px;
+            margin-top: 10px;
+        }
+        .case-study-list {
+            list-style-type: none;
+            padding: 0;
+            margin-top: 40px;
+        }
+        .case-study-list li {
+            margin: 10px 0;
+        }
+        .case-study-link {
+            text-decoration: none;
+            background-color: #94d2bd;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            font-size: 18px;
+        }
+        .case-study-link:hover {
+            background-color: #0a9396;
+        }
+        footer {
+            margin-top: 50px;
+            font-size: 14px;
+            color: #777;
+        }
+    </style>
 </head>
 <body>
+
     <header>
-        <h1>Case Study: John’s Journey</h1>
-        <p>Understanding Spinal Cord Injury (Cauda Equina Syndrome)</p>
+        <h1>Anatomy Case Studies</h1>
+        <p>Professor Shipsey</p>
     </header>
 
-    <section class="station-links">
-        <h2>Choose a Station to Begin</h2>
-        <ul>
-            <li><a href="station1.html">Station 1: Patient History & Symptoms</a></li>
-            <li><a href="station2.html">Station 2: Motor & Reflex Testing</a></li>
-            <li><a href="station3.html">Station 3: Sensory Testing – Two-Point Discrimination & Dermatome Map</a></li>
-            <li><a href="station4.html">Station 4: Imaging & Diagnosis</a></li>
-            <li><a href="station5.html">Station 5: Nervous System Structures</a></li>
-            <li><a href="station6.html">Station 6: Treatment & Prognosis</a></li>
+    <main>
+        <p>Select a case study to explore:</p>
+        <ul class="case-study-list">
+            <li><a href="https://shipseybio.github.io/anatomy-case-studies/cauda-equina/" class="case-study-link">Cauda Equina Case Study</a></li>
+            <!-- Add more case studies below using the same structure -->
+            <!-- <li><a href="link-to-another-case-study" class="case-study-link">Another Case Study</a></li> -->
         </ul>
-    </section>
+    </main>
+
+    <footer>
+        <p>Created by Professor Shipsey</p>
+    </footer>
 
 </body>
 </html>
