--- a/cauda-equina/station1.html
+++ b/cauda-equina/station1.html
@@ -22,7 +22,7 @@
         </ul>
 
         <h2>Patient Overview</h2>
-        <p>John, a 42-year-old warehouse worker, has had occasional sciatica for years. He now presents with 3 days of intense back pain and left leg numbness after lifting a heavy box. He describes a "pop" in his back and has since felt tingling in his groin and weakness in his left leg. He is struggling with urination and cannot sit comfortably due to pain.</p>
+        <p>John, a 42-year-old warehouse worker, has had occasional <strong>sciatica</strong> for years. He now presents with 3 days of intense back pain and numbness after lifting a heavy box. He describes a "pop" in his back and has since felt tingling in his groin and weakness in his left leg. He is struggling with urination and cannot sit comfortably due to pain.</p>
 
         <img src="https://github.com/shipseybio/anatomy-case-studies/blob/main/cauda-equina/patient_john.jpg?raw=true" alt="John" style="width: 300px; height: auto; margin-top: 20px;">
         
