--- a/cauda-equina/station3.html
+++ b/cauda-equina/station3.html
@@ -29,7 +29,9 @@
         <img src="https://study.com/cimages/videopreview/videopreview-full/4lw99bw48e.jpg" alt="Two-Point Discrimination Tool" style="width: 500px; height: auto; margin-top: 20px;">
 
            <h2>Patient Overview</h2>
-        <p>During the sensory exam, John is asked "One touch or two?".  He can accurately tell the difference on his arm.  But he demonstrates loss of feeling on his left lateral calf and foot, along with saddle anesthesia. Two-point discrimination testing on the lateral calf shows a result of 55mm, which is abnormal when compared to normal ranges.</p>
+        <p>During the sensory exam, John is asked "One touch or two?".  He can accurately tell the difference on his arm and fingers.  But he demonstrates loss of feeling on his left lateral calf and foot, along with saddle anesthesia.</p>
+            <img src="https://github.com/shipseybio/anatomy-case-studies/blob/main/cauda-equina/twopointdiscrimination.jpg?raw=true"
+            <p>Two-point discrimination testing on the lateral calf shows a result of 55mm, which is abnormal when compared to normal ranges.</p>
         <h3>Questions:</h3>
 
         <h4>Question 4:</h4>
