--- a/cauda-equina/station3.html
+++ b/cauda-equina/station3.html
@@ -21,7 +21,7 @@
 
 
         <h3>Task: Sensory Testing</h3>
-        <p>Use the calipers provided to simulate two-point discrimination testing on the lateral calf. Compare John’s result to the normal range chart. Also, use a dermatome map to help identify the affected spinal nerve root.</p>
+        <p>One way to assess nerve damage is to use calipers to perform two-point discrimination testing. Compare John’s result to the normal range chart. Also, use a dermatome map to help identify the affected spinal nerve root.</p>
 
 
         <!-- Visual Aid: Two-Point Discrimination Tool -->
