--- a/cauda-equina/station3.html
+++ b/cauda-equina/station3.html
@@ -24,12 +24,11 @@
         <p>One way to assess nerve damage is to use calipers to perform two-point discrimination testing. Compare John’s result to the normal range chart. Also, use a dermatome map to help identify the affected spinal nerve root.</p>
 
 
-        <!-- Visual Aid: Two-Point Discrimination Tool -->
-        <h3>Two-Point Discrimination Tool</h3>
-        <img src="https://study.com/cimages/videopreview/videopreview-full/4lw99bw48e.jpg" alt="Two-Point Discrimination Tool" style="width: 500px; height: auto; margin-top: 20px;">
-
            <h2>Patient Overview</h2>
         <p>During the sensory exam, John is asked "One touch or two?".  He can accurately tell the difference on his arm and fingers.  But he demonstrates loss of feeling on his left lateral calf and foot, along with saddle anesthesia.</p>
+         <!-- Visual Aid: Two-Point Discrimination Testing -->
+        <h3>Two-Point Discrimination Testing</h3>
+        <img src="https://study.com/cimages/videopreview/videopreview-full/4lw99bw48e.jpg" alt="Two-Point Discrimination Tool" style="width: 500px; height: auto; margin-top: 20px;">
             <img src="https://github.com/shipseybio/anatomy-case-studies/blob/main/cauda-equina/twopointdiscrimination.jpg?raw=true"
             <p>Two-point discrimination testing on the lateral calf shows a result of 65mm, which is abnormal when compared to normal ranges.</p>
        
